# metrovian

./: .gitignore  .gitmodules  CMakeLists.txt  HISTORY.md  README-H.md  README.md  meson.build
command/: abstract.cpp  abstract.h  main.cpp  main.h  meson.build
command/decompression/: abstract.h  audio.cpp  audio.h  avcodec.cpp  avcodec.h
command/decryption/: aes.cpp  aes.h  ecdh.cpp  ecdh.h  ecdsa.cpp  ecdsa.h  rsa.cpp  rsa.h
command/operation/: abstract.h  corr.cpp  corr.h  correlation.cpp  desa.cpp  desa.h  fft.cpp  fourier.cpp
command/optimization/: abstract.h  polynomial.cpp  polynomial.h  rational.cpp  rational.h  sinusoidal.cpp  sinusoidal.h  transcendental.cpp  transcendental.h  user.cpp  user.h
command/synthesis/: music.cpp  music.h
core/: meson.build  predefined.cpp  predefined.h  property.cpp  property.h
core/decompression/: abstract.cpp  abstract.h  audio.cpp  audio.h
core/include/: predefined.h
core/include/operation/: corr.h  desa.h  fft.h
core/include/reconstruction/decompression/: abstract.h  audio.h  avcodec.h
core/include/reconstruction/decryption/: aes.h  ecdsa.h  rsa.h
core/include/reconstruction/optimization/: abstract.h  rational.h  transcendental.h  user.h
core/include/sound/: abstract.h  factory.h  player.h  sequencer.h  writer.h
core/include/synthesis/: abstract.h  effector.h  hammond.h  oscillator.h  saw.h  sin.h  square.h  unison.h
core/operation/: corr.cpp  corr.h  correlation.cpp  correlation.h  desa.cpp  desa.h  fft.cpp  fft.h  fourier.cpp  fourier.h
core/optimization/: abstract.cpp  abstract.h  polynomial.cpp  polynomial.h  rational.cpp  rational.h  sinusoidal.cpp  sinusoidal.h  transcendental.cpp  transcendental.h  user.cpp  user.h
core/reconstruction/decompression/: abstract.cpp  audio.cpp  audio.h
core/reconstruction/decryption/: abstract.cpp  ecdsa.cpp  ecdsa.h  rsa.cpp  rsa.h
core/reconstruction/optimization/: abstract.cpp  polynomial.cpp  polynomial.h  rational.cpp  rational.h  sinusoidal.cpp  sinusoidal.h  transcendental.cpp  transcendental.h  user.cpp  user.h
core/sound/: abstract.cpp  abstract.h  automata.cpp  automata.h  factory.cpp  factory.h  player.cpp  player.h  sequencer.cpp  sequencer.h  writer.cpp  writer.h
core/source/: property.cpp
core/source/operation/: corr.cpp  desa.cpp  fft.cpp
core/source/reconstruction/decompression/: abstract.cpp  audio.cpp  avcodec.cpp
core/source/reconstruction/decryption/: abstract.cpp  ecdsa.cpp  rsa.cpp
core/source/reconstruction/optimization/: abstract.cpp  sinusoidal.cpp  transcendental.cpp  user.cpp
core/source/sound/: factory.cpp  player.cpp  sequencer.cpp  writer.cpp
core/source/synthesis/: abstract.cpp  effector.cpp  hammond.cpp  oscillator.cpp  saw.cpp  sin.cpp  square.cpp  unison.cpp
core/synthesis/: abstract.cpp  abstract.h  add.cpp  add.h  effector.cpp  hammond.cpp  hammond.h  oscillator.cpp  oscillator.h  saw.cpp  saw.h  sin.cpp  sin.h  square.cpp  square.h  unison.cpp  unison.h
daemon/: api.cpp  automata.cpp  automata.h  context.cpp  context.h  main.cpp  main.h  meson.build
daemon/api/: response.cpp  router.cpp
daemon/api/read/: abstract.h  mid.cpp  mids.cpp  notes.cpp  progress.cpp  state.cpp  waveform.cpp  waveforms.cpp
daemon/api/write/: play.cpp  reboot.cpp  volume.cpp  waveform.cpp
daemon/hardware/: abstract.cpp  abstract.h  development.cpp  development.h  raspi.cpp  raspi.h
daemon/hardware/abstract/: abstract.h  indicator.h  knob.h  segment.h
daemon/hardware/development/: indicator.cpp  indicator.h  knob.cpp  knob.h
daemon/hardware/raspi/: indicator.cpp  indicator.h  knob.cpp  knob.h  segment.cpp  segment.h
daemon/machine/: api.cpp  api.h  automata.cpp  automata.h  performance.cpp  setup.cpp  synthesis.cpp
daemon/machine/state/: abstract.h  performance.cpp  setup.cpp  synthesis.cpp
daemon/server-micro/: api.cpp  api.h  automata.cpp  automata.h  context.cpp  context.h  response.cpp  response.h  restapi.cpp  restapi.h  router.cpp
daemon/server-micro/parser/: abstract.cpp  abstract.h  router.cpp  router.h
daemon/server-micro/parser/read/: abstract.h  mid.cpp  mid.h  mids.cpp  mids.h  notes.cpp  notes.h  progress.cpp  progress.h  state.cpp  state.h  waveform.cpp  waveform.h  waveforms.cpp  waveforms.h
daemon/server-micro/parser/write/: abstract.h  play.cpp  play.h  reboot.cpp  reboot.h  volume.cpp  volume.h  waveform.cpp  waveform.h
daemon/server-micro/read/: abstract.h  mid.cpp  mids.cpp  notes.cpp  progress.cpp  state.cpp  waveform.cpp  waveforms.cpp
daemon/server-micro/write/: play.cpp  reboot.cpp  volume.cpp  waveform.cpp
daemon/state/: abstract.cpp  abstract.h  dummy.cpp  dummy.h  none.cpp  none.h  performance.cpp  performance.h  setup.cpp  setup.h  synthesis.cpp  synthesis.h  wait.cpp  wait.h
include/: abstract_decryption.h  command_abstract.h  decompression_abstract.h  decompression_avcodec.h  decryption_abstract.h  decryption_aes.h  decryption_base.h  decryption_rsa.h  interface_singleton.h  main.h  optimization_abstract.h  optimization_user.h  predefined.h  property.h
include/command/: abstract.h  oscillator.h  rsa.h  taylor.h  user.h
include/decompression/: avcodec.h
include/decryption/: aes.h  ecdh.h  rsa.h
include/operation/: desa.h
include/optimization/: abstract.h  oscillator.h  taylor.h  user.h
source/: abstract_decryption.cpp  command_abstract.cpp  decompression_abstract.cpp  decompression_avcodec.cpp  decryption_abstract.cpp  decryption_aes.cpp  decryption_base.cpp  decryption_rsa.cpp  interface_singleton.cpp  main.cpp  optimization_abstract.cpp  optimization_user.cpp  property.cpp
source/command/: abstract.cpp  aes.cpp  avcodec.cpp  ecdh.cpp  oscillator.cpp  rsa.cpp  taylor.cpp  user.cpp
source/decompression/: abstract.cpp  avcodec.cpp
source/decryption/: abstract.cpp  aes.cpp  ecdh.cpp  rsa.cpp
source/operation/: desa.cpp
source/optimization/: abstract.cpp  oscillator.cpp  taylor.cpp  user.cpp
system/: setup-hostapd.sh  setup-key.sh  setup-metroviand.sh  setup-nginx.sh  setup-samba.sh
system/hostapd/: dhcpcd.conf  dnsmasq.conf  hostapd.conf
(+54 files in other folders)
