CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(metrovian-tools LANGUAGES C CXX)

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

INCLUDE_DIRECTORIES(
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/eigen)

FILE(GLOB_RECURSE SOURCES_COMMON
        ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/source/*.c)
        
ADD_SUBDIRECTORY(3rdparty/spdlog)
SET(SUBDIR_LIBRARIES 
        spdlog::spdlog)

FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)
SET(OSSL_LIBRARIES 
        OpenSSL::Crypto 
        OpenSSL::SSL)

PKG_CHECK_MODULES(GMP REQUIRED gmp)
INCLUDE_DIRECTORIES(${GMP_INCLUDE_DIRS})
LINK_DIRECTORIES(${GMP_LIBRARY_DIRS})

ADD_EXECUTABLE(test module/main_test.cpp ${SOURCES_COMMON})
TARGET_LINK_LIBRARIES(test PRIVATE 
        ${SUBDIR_LIBRARIES}         
        ${OSSL_LIBRARIES} 
        ${GMP_LIBRARIES})