CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(metrovian-tools LANGUAGES C CXX)

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

INCLUDE_DIRECTORIES(
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/eigen
        ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/json/include)

FILE(GLOB_RECURSE SOURCES_COMMON
        ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/source/*.c)
        
OPTION(ENABLE_SAMPLES OFF)
OPTION(ENABLE_OPENMP ON)
OPTION(ENABLE_WIDE_CHAR OFF)
OPTION(BUILD_SHARED_LIBS OFF)

ADD_SUBDIRECTORY(3rdparty/cli11)
ADD_SUBDIRECTORY(3rdparty/muparser)
ADD_SUBDIRECTORY(3rdparty/spdlog)
SET(SUBDIR_LIBRARIES
        CLI11::CLI11 
        muparser::muparser
        spdlog::spdlog)

FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)
SET(OSSL_LIBRARIES 
        OpenSSL::Crypto 
        OpenSSL::SSL)

PKG_CHECK_MODULES(GSL REQUIRED gsl)
INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS})
LINK_DIRECTORIES(${GSL_LIBRARY_DIRS})

PKG_CHECK_MODULES(GMP REQUIRED gmp)
INCLUDE_DIRECTORIES(${GMP_INCLUDE_DIRS})
LINK_DIRECTORIES(${GMP_LIBRARY_DIRS})

PKG_CHECK_MODULES(ALSA REQUIRED alsa)
INCLUDE_DIRECTORIES(${ALSA_INCLUDE_DIRS})
LINK_DIRECTORIES(${ALSA_LIBRARY_DIRS})

PKG_CHECK_MODULES(FFMPEG REQUIRED libavcodec libavformat libavutil libswresample)
INCLUDE_DIRECTORIES(${FFMPEG_INCLUDE_DIRS})
LINK_DIRECTORIES(${FFMPEG_LIBRARY_DIRS})

ADD_EXECUTABLE(metrovian ${SOURCES_COMMON})
TARGET_LINK_LIBRARIES(metrovian PRIVATE 
        ${SUBDIR_LIBRARIES}         
        ${OSSL_LIBRARIES} 
        ${GSL_LIBRARIES}
        ${GMP_LIBRARIES}
        ${ALSA_LIBRARIES}
        ${FFMPEG_LIBRARIES})